# libsexier

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  libsexier.pc.in
examples/: Makefile.am  fittsmenu.c
libsexier/: Makefile.am  fittsmenu.c  fittsmenu.h
